[package]
name = "tasd-edit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
crossterm = "0.20"
regex = "1.5"
chrono = "0.4"
strum = "0.21"
strum_macros = "0.21"
dyn-clone = "1"
#colored = "2"